--- a/index.html
+++ b/index.html
@@ -5,8 +5,92 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
+    <header class="page-header">
+      <nav class="navigation">
+        <ul class="navigation-user">
+          <li class="navigation-item-user">
+            <a href="#" class="navigation-link-enter">
+              <span class="visually-hidden">
+                Войти
+              </span>
+            </a>
+          </li>
+          <li class="navigation-item-user">
+            <a href="#" class="navigation-link-compare">
+              <span class="visually-hidden">
+              Сравнить
+              </span>
+            </a>
+          </li>
+          <li class="navigation-item-user">
+            <a href="#" class="navigation-link-bin">
+              <span class="visually-hidden">
+              Корзина
+              </span>
+            </a>
+          </li>
+        </li>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+        </ul>
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a href="catalog.html" class="navigation-link-catalog">
+              каталог товаров
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a href="#" class="navigation-link-delivery">
+              доставка
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a href="#" class="navigation-link-warranty">
+              гарантия
+            </a>
+          </li>
+        </li>
+        <li class="navigation-item">
+          <a href="#" class="navigation-link-contacts">
+            контакты
+          </a>
+        </li>
 
+        </ul>
+
+      </nav>
+    </header>
+    
+    <main class="main-index">
+      <img src="#" class="slider" alt="Фотография квадрокоптера">
+        <section class="main-description">
+          <h1 class="visually-hidden">Порхает как бабочка,<br>жалит как пчела!</h1>
+          <p class="main-description">Этот обычный, напервый взгляд, квадрокоптер
+          оснащен мощным лазером, замаскированным под стандартную камеру.
+           </p>
+        </section>
+      <a href="#" class="main-more">подробнее</a>
+      <span class="advantage-far"><b>800 м</b></span>
+      <span class="advantage-far-description">Дальность полета</span>
+      <span class="advantage-radius"><b>50 м</b></span>
+      <span class="advantage-radius-description">Радиус поражения</span>
+      <section class="main-products-VR">
+        <img src="#" class="VR" alt="Изображение VR очков">
+        <h4 class="VR">Виртуальная реальность</h4>
+        <img src="#" class="selfie" alt="Изображение selfie палки">
+        <h4 class="selfie">Моноподы для селфи</h4>
+        <img src="#" class="cameras" alt="Изображение action камеры">
+        <h4 class="cameras">Экшн-камеры</h4>
+        <img src="#" class="fitness-wristband" alt="Изображение fitness браслета">
+        <h4 class="fitness-wristband">Фитнес-браслеты</h4>
+        <img src="#" class="smart-watch" alt="Изображение умных часов">
+        <h4 class="smart-watch">Умные часы</h4>
+        <img src="#" class="sliders" alt="Изображение квадрокоптера">
+        <h4 class="sliders">Квадрокоптеры</h4>
+      </section>
+
+    </main>
+<footer class="page-footer"
+
+</footer>
   </body>
 </html>
