каталог+главная -версия 1

--- a/catalog.html
+++ b/catalog.html
@@ -147,6 +147,72 @@
 
         </form>
 
+<section class="catalog-products">
+  <ul class="catalog-products-list">
+    <li class="catalog-products-item">
+      <img src="#" alt="Палка для селфи">
+      <h5>Любительская
+        селфи-палка
+      </h5>
+      <span>500 р</span>
+    </li>
+
+    <li class="catalog-products-item">
+      <img src="#" alt="Профессиональная селфи-палка">
+      <h5>Профессиональная
+        селфи-палка
+      </h5>
+      <span>1 500 р</span>
+    </li>
+
+    <li class="catalog-products-item">
+      <img src="#" alt="Непотопляемая селфи-палка">
+      <h5>Непотопляемая
+        селфи-палка
+      </h5>
+      <span>2 500 р</span>
+    </li>
+
+    <li class="catalog-products-item">
+      <img src="#" alt="Палка следуй за мной">
+      <h5>Селфи-палка "Следуй за мной"
+      </h5>
+      <span>1 500 р</span>
+    </li>
+  </ul>
+  <button type="button" class="catalog-more"><a href="#">загрузить ещё</a></button>
+</section>
+
+<section class="pagination">
+<ul class="pagination">
+  <li class="pagination-item">
+    <a class="pagination-link pagination-prev pagination-disabled">
+      <span class="visually-hidden">назад</span>
+    </a>
+  </li>
+  <li class="pagination-item">
+    <a class="pagination-link pagination-current">1</a>
+  </li>
+  <li class="pagination-item">
+    <a class="pagination-link" href="#">2</a>
+  </li>
+  <li class="pagination-item">
+    <a class="pagination-link" href="#">3</a>
+  </li>
+  <li class="pagination-item">
+    <a class="pagination-link" href="#">...</a>
+  </li>
+  <li class="pagination-item">
+    <a class="pagination-link" href="#">15</a>
+  </li>
+  <li class="pagination-item">
+    <a class="pagination-link pagination-next" href="#">
+      <span class="visually-hidden">вперед</span>
+    </a>
+  </li>
+</ul>
+</section>
+
 
 </main>
 
