--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
           <li class="warranty-item">гарантия</li>
           <li class="credit-item">кредит</li>
         </ul>
+        <img src="#" class="d-w-c-man" alt="Изображение доставщика">
       </section>
 
       <section class="delivery-only">
