--- a/index.html
+++ b/index.html
@@ -61,47 +61,61 @@
             контакты
           </a>
         </li>
-
         </ul>
-
       </nav>
     </header>
     
     <main class="main-index">
       <img src="#" class="slider" alt="Фотография квадрокоптера">
-        <section class="main-description">
+      <section class="main-description">
           <h1 class="visually-hidden">Порхает как бабочка,<br>жалит как пчела!</h1>
           <p class="main-description">Этот обычный, на первый взгляд, квадрокоптер
           оснащен мощным лазером, замаскированным под стандартную камеру.
            </p>
         </section>
-        <a href="#" class="main-more">подробнее</a>
-          <span class="advantage-far"><b>800 м</b></span>
-          <span class="advantage-far-description">Дальность полета</span>
-          <span class="advantage-radius"><b>50 м</b></span>
-          <span class="advantage-radius-description">Радиус поражения</span>
-        <section class="main-products-VR">
-        <img src="#" class="VR" alt="Изображение VR очков">
-        <h4 class="VR">Виртуальная реальность</h4>
-        <img src="#" class="selfie" alt="Изображение selfie палки">
-        <h4 class="selfie">Моноподы для селфи</h4>
-        <img src="#" class="cameras" alt="Изображение action камеры">
-        <h4 class="cameras">Экшн-камеры</h4>
-        <img src="#" class="fitness-wristband" alt="Изображение fitness браслета">
-        <h4 class="fitness-wristband">Фитнес-браслеты</h4>
-        <img src="#" class="smart-watch" alt="Изображение умных часов">
-        <h4 class="smart-watch">Умные часы</h4>
-        <img src="#" class="copter" alt="Изображение квадрокоптера">
-        <h4 class="copter">Квадрокоптеры</h4>
-      </section>
+      <a href="#" class="main-more">подробнее</a>
+        <span class="advantage-far">
+          <b>800 м</b>
+        </span>
+        <span class="advantage-far-description">Дальность полета</span>
+        <span class="advantage-radius">
+          <b>50 м</b>
+        </span>
+        <span class="advantage-radius-description">Радиус поражения</span>
+      <ul class="main-products-vr">
+        <li>
+          <img src="#" class="VR" alt="Изображение VR очков">
+            <h2 class="vr">Виртуальная реальность</h2>
+        </li>
+        <li>
+          <img src="#" class="selfie" alt="Изображение selfie палки">
+            <h2 class="selfie">Моноподы для селфи</h2>
+        </li>
+        <li>
+          <img src="#" class="cameras" alt="Изображение action камеры">
+            <h2 class="cameras">Экшн-камеры</h2>
+        </li>
+          <img src="#" class="fitness-wristband" alt="Изображение fitness браслета">
+            <h2 class="fitness-wristband">Фитнес-браслеты</h2>
+        </li>
+        <li>  
+          <img src="#" class="smart-watch" alt="Изображение умных часов">
+            <h2 class="smart-watch">Умные часы</h2>
+        </li>
+        <li>
+          <img src="#" class="copter" alt="Изображение квадрокоптера">
+            <h2 class="copter">Квадрокоптеры</h2>
+        </li>
+      </ul>
 
       <section class="delivery-warranty-credit">
         <ul class="d-w-c-list">
           <li class="delivery-item">
             доставка
           </li>
-          <p><h3>Доставка</h3>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно беспатно!
-          Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+            <h3>Доставка</h3>
+            <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно беспатно!
+                Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
           <li class="warranty-item">гарантия</li>
           <li class="credit-item">кредит</li>
         </ul>
@@ -114,20 +128,22 @@
         <button type="button"><img src="#" class="delivery-only-icon" alt="перевернутый знак"></button>
       </section>
 
-      <section class="about-us">
-        <p class="about"><h3>О нас</h3>Огромный выбор гаджетов не оставит равнодушным
+      <section class="about">
+        <h3>О нас</h3>
+        <p class="about-us">Огромный выбор гаджетов не оставит равнодушным
         гика, который есть в каждом из нас.</p>
         <p>Мы можем доставить ваш товар в самые отдаленные уголки России транспортными компаниями:</p>
-        <ol class="delivery-comp">
+        <ol class="about-comp">
           <li class="copm1">Меловые линии</li>
           <li class="comp2">СДИК</li>
           <li class="comp3">ТоксБерри</li>
         </ol>
-        <a class="more-about-us" href="#">подробнее о нас</a>
+        <a class="about-more" href="#">подробнее о нас</a>
       </section>
 
       <section class="contacts" id="contacts">
-        <p class="contacts"><h3>Контакты</h3>Вы можете забрать товар сами, заезав в наш офис.
+        <h3>Контакты</h3>
+        <p class="contacts">Вы можете забрать товар сами, заезав в наш офис.
         Заодно сможете проверить работоспособность покупки.</p>
         <h4>Интернет-магазин "Девайс"</h4>
         <address><p class="adress">Санкт-Петербург,набережная реки Карповки, 5, литера П</p>
@@ -143,9 +159,11 @@
       <section class="mailing">
         <p class="subscription"><h2>Подпишитесь на рассылку</h2>Еженедельный дайджест с обзорами новинок,
         длительными тест-драйвами, распаковками, а также акции,
-      спецпредложения и вот это всё.</p>
+        спецпредложения и вот это всё.</p>
       <form class="email" action="https://echo.htmlacademy.ru/" method="post">
-        <input type="email" name="email-date" placeholder="Ваш e-mail">
+        <label class="email">
+          <input type="email" name="email-date" placeholder="Ваш e-mail">
+        </label>
         <button type="submit">подписаться</button>
         <span>Это бесплатно</span>
       </form>
@@ -153,14 +171,16 @@
     </main>
 
     <footer class="page-footer">
-<img src="#" class="logo" alt="Логотип">
-<adress>Санкт-Петербург,набережная 
-  реки Карповки, 5, литера П</adress>
-  <a href="#" class="delivery">доставка</a>
-  <a href="#" class="warranty"> гарантия</a>
-  <a href="#contacts" class="contacts">контакты</a>
-  <a class="tel" href="tel:+78128121212">+7 (812) 812-12-12</a>
-  <a class="academy-logo" href="https://htmlacademy.ru/"><img src="#" alt="Логотип Академии"></a>
+      <img src="#" class="logo" alt="Логотип">
+      <adress>Санкт-Петербург,набережная 
+               реки Карповки, 5, литера П
+      </adress>
+      <a href="#" class="delivery">доставка</a>
+      <a href="#" class="warranty"> гарантия</a>
+      <a href="#contacts" class="contacts">контакты</a>
+      <a class="tel" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <a class="academy-logo" href="https://htmlacademy.ru/">
+      <img src="#" alt="Логотип Академии"></a>
     </footer>
   </body>
 </html>
