--- a/catalog.html
+++ b/catalog.html
@@ -5,9 +5,10 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
+    <img src="graphics/frame header/Group.png" class="logo" alt="Логотип" width="145" height="36">
     <section>
-      <img href="#" class="logo" alt="Логотип">
       <form class="search">
+        <img src="graphics/frame header/search/search/Vector.png" alt="лупа" width="16" height="16">
       <input type="text" name="search" placeholder="Текст поиска">
       <button type="submit" class="search-button">Найти</button>
     </form>
@@ -16,6 +17,7 @@
       <nav class="navigation">
         <ul class="navigation-user">
           <li class="navigation-item-user">
+            <img src="graphics/frame header/header/Vector.png" alt="человек" width="13" height="12">
             <a href="#" class="navigation-link-enter">
               <span class="visually-hidden">
                 Войти
@@ -23,6 +25,7 @@
             </a>
           </li>
           <li class="navigation-item-user">
+            <img src="graphics/frame header/Vector.png" alt="сравнение" width="10" height="12">
             <a href="#" class="navigation-link-compare">
               <span class="visually-hidden">
               Сравнить
@@ -30,6 +33,8 @@
             </a>
           </li>
           <li class="navigation-item-user">
+            <img src="graphics/frame header/2.png" alt="2" width="21" height="21">
+            <img src="graphics/frame header/Vector-2.png" alt="корзина" width="16" height="14">
             <a href="#" class="navigation-link-bin">
               <span class="visually-hidden">
               Корзина
@@ -61,9 +66,8 @@
             контакты
           </a>
         </li>
-
         </ul>
-
+        <img src="/graphics/frame header/01.png" alt="01" width="250" height="135">
       </nav>
     </header>
 
@@ -150,28 +154,28 @@
       <section class="catalog-products">
         <ul class="catalog-products-list">
           <li class="catalog-products-item">
-            <img src="#" alt="Палка для селфи">
+            <img src="/graphics/catalog/HTML 1 _ Девайс-14/product-2.png" alt="Палка для селфи" width="360" height="380">
             <h3>Любительская
                 селфи-палка
             </h3>
             <span>500 р</span>
           </li>
           <li class="catalog-products-item">
-            <img src="#" alt="Профессиональная селфи-палка">
+            <img src="/graphics/catalog/HTML 1 _ Девайс-14/product-2-1.png" alt="Профессиональная селфи-палка" width="360" height="380">
             <h3>Профессиональная
                   селфи-палка
             </h3>
             <span>1 500 р</span>
           </li>
           <li class="catalog-products-item">
-            <img src="#" alt="Непотопляемая селфи-палка">
+            <img src="/graphics/catalog/HTML 1 _ Девайс-14/product-2-2.png" alt="Непотопляемая селфи-палка" width="360" height="380">
             <h3>Непотопляемая
                 селфи-палка
             </h3>
             <span>2 500 р</span>
           </li>
           <li class="catalog-products-item">
-            <img src="#" alt="Палка следуй за мной">
+            <img src="/graphics/catalog/HTML 1 _ Девайс-14/product-2-3.png" alt="Палка следуй за мной" width="360" height="380">
             <h3>Селфи-палка "Следуй за мной"
             </h3>
             <span>1 500 р</span>
@@ -212,14 +216,18 @@
     </main>
 
     <footer class="page-footer">
-        <img src="#" class="logo" alt="Логотип">
+        <img src="/graphics/footer/HTML 1 _ Девайс-10/Group.png" class="logo" alt="Логотип" width="144.9" height="36">
         <adress>Санкт-Петербург,набережная 
           реки Карповки, 5, литера П</adress>
           <a href="#" class="delivery">доставка</a>
           <a href="#" class="warranty"> гарантия</a>
           <a href="#contacts" class="contacts">контакты</a>
           <a class="tel" href="tel:+78128121212">+7 (812) 812-12-12</a>
-          <a class="academy-logo" href="https://htmlacademy.ru/"><img src="#" alt="Логотип Академии"></a>
+          <a class="academy-logo" href="https://htmlacademy.ru/">
+            <img src="/graphics/footer/HTML 1 _ Девайс-10/Vector-1.png" alt="телеграм" width="13.34" height="11.19">
+            <img src="/graphics/footer/HTML 1 _ Девайс-10/Vector-2.png" alt="ютуб" width="16" height="10.67">
+            <img src="/graphics/footer/HTML 1 _ Девайс-10/Vector-3.png" alt="твиттер" width="15" height="14.06">
+            <img src="/graphics/footer/HTML 1 _ Девайс-10/Vector.png" alt="Логотип Академии" width="114.9" height="32.9"></a>
             </footer>
           </body>
         </html> 
