--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
+    <img src="graphics/frame header/Group.png" class="logo" alt="Логотип" width="145" height="36">
     <section>
-      <img href="#" class="logo" alt="Логотип">
       <form class="search">
+        <img src="graphics/frame header/search/search/Vector.png" alt="лупа" width="16" height="16">
       <input type="text" name="search" placeholder="Текст поиска">
       <button type="submit" class="search-button">Найти</button>
     </form>
@@ -16,6 +17,7 @@
       <nav class="navigation">
         <ul class="navigation-user">
           <li class="navigation-item-user">
+            <img src="graphics/frame header/header/Vector.png" alt="человек" width="13" height="12">
             <a href="#" class="navigation-link-enter">
               <span class="visually-hidden">
                 Войти
@@ -23,6 +25,7 @@
             </a>
           </li>
           <li class="navigation-item-user">
+            <img src="graphics/frame header/Vector.png" alt="сравнение" width="10" height="12">
             <a href="#" class="navigation-link-compare">
               <span class="visually-hidden">
               Сравнить
@@ -30,6 +33,8 @@
             </a>
           </li>
           <li class="navigation-item-user">
+            <img src="graphics/frame header/2.png" alt="2" width="21" height="21">
+            <img src="graphics/frame header/Vector-2.png" alt="корзина" width="16" height="14">
             <a href="#" class="navigation-link-bin">
               <span class="visually-hidden">
               Корзина
@@ -62,11 +67,12 @@
           </a>
         </li>
         </ul>
+        <img src="/graphics/frame header/01.png" alt="01" width="250" height="135">
       </nav>
     </header>
     
     <main class="main-index">
-      <img src="#" class="slider" alt="Фотография квадрокоптера">
+      <img src="/graphics/main-slider/slider-1.png" class="slider" alt="Фотография квадрокоптера" width="560" height="560">
       <section class="main-description">
           <h1 class="visually-hidden">Порхает как бабочка,<br>жалит как пчела!</h1>
           <p class="main-description">Этот обычный, на первый взгляд, квадрокоптер
@@ -84,26 +90,32 @@
         <span class="advantage-radius-description">Радиус поражения</span>
       <ul class="main-products-vr">
         <li>
-          <img src="#" class="VR" alt="Изображение VR очков">
+          <img src="/graphics/main-slider/HTML 1 _ Девайс-4/Vector.png" class="VR" alt="Изображение VR очков"
+          width="96.95" height="54.99">
             <h2 class="vr">Виртуальная реальность</h2>
         </li>
         <li>
-          <img src="#" class="selfie" alt="Изображение selfie палки">
+          <img src="/graphics/main-slider/HTML 1 _ Девайс-4/Vector-1.png" class="selfie" alt="Изображение selfie палки"
+          width="85.87" height="117">
             <h2 class="selfie">Моноподы для селфи</h2>
         </li>
         <li>
-          <img src="#" class="cameras" alt="Изображение action камеры">
+          <img src="/graphics/main-slider/HTML 1 _ Девайс-4/Vector-2.png" class="cameras" alt="Изображение action камеры"
+          width="71.02" height="87">
             <h2 class="cameras">Экшн-камеры</h2>
         </li>
-          <img src="#" class="fitness-wristband" alt="Изображение fitness браслета">
+          <img src="/graphics/main-slider/HTML 1 _ Девайс-4/Vector-3.png" class="fitness-wristband" alt="Изображение fitness браслета"
+          width="107.31" height="64.99">
             <h2 class="fitness-wristband">Фитнес-браслеты</h2>
         </li>
         <li>  
-          <img src="#" class="smart-watch" alt="Изображение умных часов">
+          <img src="/graphics/main-slider/HTML 1 _ Девайс-4/Vector-4.png" class="smart-watch" alt="Изображение умных часов"
+          width="56.01" height="97.98">
             <h2 class="smart-watch">Умные часы</h2>
         </li>
         <li>
-          <img src="#" class="copter" alt="Изображение квадрокоптера">
+          <img src="/graphics/main-slider/HTML 1 _ Девайс-4/Vector-5.png" class="copter" alt="Изображение квадрокоптера"
+          width="132.03" height="69.01">
             <h2 class="copter">Квадрокоптеры</h2>
         </li>
       </ul>
@@ -119,13 +131,16 @@
           <li class="warranty-item">гарантия</li>
           <li class="credit-item">кредит</li>
         </ul>
-        <img src="#" class="d-w-c-man" alt="Изображение доставщика">
+        <img src="/graphics/main-delivery/HTML 1 _ Девайс-6/картинка.png" class="d-w-c-man" alt="Изображение доставщика"
+        width="136" height="164">
       </section>
 
       <section class="delivery-only">
-        <img src="#" class="delivery-only-icon-car" alt="Иконка машины">
+        <img src="/graphics/main-box/HTML 1 _ Девайс-7/Vector.png" class="delivery-only-icon-car" alt="Иконка машины"
+        width="47" height="31.1">
         <p class="delivery-only-text">доставим редкий товар под заказ</p>
-        <button type="button"><img src="#" class="delivery-only-icon" alt="перевернутый знак"></button>
+        <button type="button"><img src="/graphics/main-box/HTML 1 _ Девайс-7/Frame.png" class="delivery-only-icon" alt="перевернутый знак"
+          width="2" height="12"></button>
       </section>
 
       <section class="about">
@@ -165,13 +180,14 @@
           <input type="email" name="email-date" placeholder="Ваш e-mail">
         </label>
         <button type="submit">подписаться</button>
+        <img src="/graphics/main-about us/Vector-5.png" alt="галочка" width="14" height="14">
         <span>Это бесплатно</span>
       </form>
       </section>
     </main>
 
     <footer class="page-footer">
-      <img src="#" class="logo" alt="Логотип">
+      <img src="/graphics/footer/HTML 1 _ Девайс-10/Group.png" class="logo" alt="Логотип" width="144.9" height="36">
       <adress>Санкт-Петербург,набережная 
                реки Карповки, 5, литера П
       </adress>
@@ -180,7 +196,10 @@
       <a href="#contacts" class="contacts">контакты</a>
       <a class="tel" href="tel:+78128121212">+7 (812) 812-12-12</a>
       <a class="academy-logo" href="https://htmlacademy.ru/">
-      <img src="#" alt="Логотип Академии"></a>
+        <img src="/graphics/footer/HTML 1 _ Девайс-10/Vector-1.png" alt="телеграм" width="13.34" height="11.19">
+        <img src="/graphics/footer/HTML 1 _ Девайс-10/Vector-2.png" alt="ютуб" width="16" height="10.67">
+        <img src="/graphics/footer/HTML 1 _ Девайс-10/Vector-3.png" alt="твиттер" width="15" height="14.06">
+      <img src="/graphics/footer/HTML 1 _ Девайс-10/Vector.png" alt="Логотип Академии" width="114.9" height="32.9"></a>
     </footer>
   </body>
 </html>
