--- a/catalog.html
+++ b/catalog.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
+    <link rel="stylesheet" href="/ styles/styles.css">
   </head>
   <body>
-    <img src="/images/header/logo.png" class="logo" alt="Логотип" width="145" height="36">
+    <img src="/images/header/logo.svg" class="logo" alt="Логотип Девайс" width="145" height="36">
     <section>
       <form class="search">
         <img src="/images/header/search.svg" alt="лупа" width="16" height="16">
@@ -220,7 +221,7 @@
     </main>
 
     <footer class="page-footer">
-      <img src="/images/footer/logo yellow.png" class="logo" alt="Логотип" width="144.9" height="36">
+      <img src="/images/header/logo.svg" class="logo" alt="Логотип Девайс" width="145" height="36">
       <adress>Санкт-Петербург,набережная 
                реки Карповки, 5, литера П
       </adress>
