--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
+    <link rel="stylesheet" href="/ styles/styles.css">
   </head>
   <body>
-    <img src="/images/header/logo.png" class="logo" alt="Логотип" width="145" height="36">
+    <img src="/images/header/logo.svg" class="logo" alt="Логотип Девайс" width="145" height="36">
     <section>
       <form class="search">
         <img src="/images/header/search.svg" alt="лупа" width="16" height="16">
@@ -67,7 +68,7 @@
           </a>
         </li>
         </ul>
-        <img src="/images/header/01.png" alt="01" width="250" height="135">
+        <span class="text-01">01</span>
       </nav>
     </header>
     
@@ -90,32 +91,32 @@
         <span class="advantage-radius-description">Радиус поражения</span>
       <ul class="main-products-vr">
         <li>
-          <img src="/images/main/glasses.png" class="VR" alt="Изображение VR очков"
-          width="96.95" height="54.99">
+          <img src="/images/main/glasses.svg" class="VR" alt="Изображение VR очков"
+          width="97" height="55">
             <h2 class="vr">Виртуальная реальность</h2>
         </li>
         <li>
-          <img src="/images/main/selfie stick.png" class="selfie" alt="Изображение selfie палки"
-          width="85.87" height="117">
+          <img src="/images/main/selfie stick .svg" class="selfie" alt="Изображение selfie палки"
+          width="86" height="117">
             <h2 class="selfie">Моноподы для селфи</h2>
         </li>
         <li>
-          <img src="/images/main/camera.png" class="cameras" alt="Изображение action камеры"
-          width="71.02" height="87">
+          <img src="/images/main/camera.svg" class="cameras" alt="Изображение action камеры"
+          width="71" height="87">
             <h2 class="cameras">Экшн-камеры</h2>
         </li>
-          <img src="/images/main/wristband.png" class="fitness-wristband" alt="Изображение fitness браслета"
-          width="107.31" height="64.99">
+          <img src="/images/main/wristband.svg" class="fitness-wristband" alt="Изображение fitness браслета"
+          width="107" height="65">
             <h2 class="fitness-wristband">Фитнес-браслеты</h2>
         </li>
         <li>  
-          <img src="/images/main/watch.png" class="smart-watch" alt="Изображение умных часов"
-          width="56.01" height="97.98">
+          <img src="/images/main/watch.svg" class="smart-watch" alt="Изображение умных часов"
+          width="56" height="98">
             <h2 class="smart-watch">Умные часы</h2>
         </li>
         <li>
-          <img src="/images/main/quadcopt.png" class="copter" alt="Изображение квадрокоптера"
-          width="132.03" height="69.01">
+          <img src="/images/main/quadcopt.svg" class="copter" alt="Изображение квадрокоптера"
+          width="132" height="69">
             <h2 class="copter">Квадрокоптеры</h2>
         </li>
       </ul>
@@ -131,13 +132,13 @@
           <li class="warranty-item">гарантия</li>
           <li class="credit-item">кредит</li>
         </ul>
-        <img src="/images/main/delivery man.png" class="d-w-c-man" alt="Изображение доставщика"
+        <img src="/images/main/delivery man.svg" class="delivery-man" alt="Изображение доставщика"
         width="136" height="164">
       </section>
 
       <section class="delivery-only">
-        <img src="/images/main/car.png" class="delivery-car" alt="Иконка машины"
-        width="47" height="31.1">
+        <img src="/images/main/car.svg" class="delivery-car" alt="Иконка машины"
+        width="47" height="31">
         <p class="delivery-only-text">доставим редкий товар под заказ</p>
         <button type="button">
           <img src="/images/main/point.svg" class="delivery-only-icon" alt="перевернутый знак"
@@ -188,7 +189,7 @@
     </main>
 
     <footer class="page-footer">
-      <img src="/images/footer/logo yellow.png" class="logo" alt="Логотип" width="144.9" height="36">
+      <img src="/images/header/logo.svg" class="logo" alt="Логотип Девайс" width="144.9" height="36">
       <adress>Санкт-Петербург,набережная 
                реки Карповки, 5, литера П
       </adress>
